added static paged for about and conact

--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -14,15 +14,15 @@
 </head>
 
     <body>
-    <!-- Remove this line the first time you edit this file -->
     <!--Add a nav bar here -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="nav-item" href="{% url 'djangoapp:index' %}">Dealership Review</a>
         <a class="nav-item" href="{% url 'djangoapp:about' %}">About</a>
         <a class="nav-item" href="{% url 'djangoapp:contact' %}">Contact</a>
     </nav>
-
-    <!--Add a dealer table here -->
+    <h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
+        </h1>
 
     </body>
 
