--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -15,11 +15,27 @@
 
     <body>
     <!--Add a nav bar here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="nav-item" href="{% url 'djangoapp:index' %}">Dealership Review</a>
-        <a class="nav-item" href="{% url 'djangoapp:about' %}">About</a>
-        <a class="nav-item" href="{% url 'djangoapp:contact' %}">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+        <a class="nav-item ml-auto" href="{% url 'djangoapp:index' %}">Dealership Review</a>
+        <a class="nav-item ml-auto" href="{% url 'djangoapp:about' %}">About</a>
+        <a class="nav-item ml-auto" href="{% url 'djangoapp:contact' %}">Contact</a>
+        {% if user.is_authenticated %}
+            <form class="form-inline" method="POST" action="{% url 'djangoapp:logout' %}">
+                {% csrf_token %}
+                <button class="btn btn-default text-primary" type="submit">Welcome {{ user.username }}</button>
+                <button class="btn btn-default text-primary" type="submit">Logout</button>
+            </form>
+        {% else %}
+            <form class="form-inline" method="POST" action="{% url 'djangoapp:login' %}">
+                {% csrf_token %}
+                <input class="form-control" type="text" id="username" name="username" placeholder="Username:">
+                <input class="form-control" type="password" id="password" name="password" placeholder="Password:">
+                <button class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-default text-primary" type="submit">Sign Up</button>
+            </form>
+        {% endif %}
     </nav>
+
     <h1>
         Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
         </h1>
