--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dealership Review</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -16,27 +16,7 @@
     <body>
     <!-- Remove this line the first time you edit this file -->
     <!--Add a nav bar here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
-        <a class="nav-item ml-auto" href="{% url 'djangoapp:index' %}">Dealership Review</a>
-        <a class="nav-item ml-auto" href="{% url 'djangoapp:about' %}">About</a>
-        <a class="nav-item ml-auto" href="{% url 'djangoapp:contact' %}">Contact</a>
-        {% if user.is_authenticated %}
-            <form class="form-inline" method="POST" action="{% url 'djangoapp:logout' %}">
-                {% csrf_token %}
-                <button class="btn btn-default text-primary" type="submit">Welcome {{ user.username }}</button>
-                <button class="btn btn-default text-primary" type="submit">Logout</button>
-            </form>
-        {% else %}
-            <form class="form-inline" method="POST" action="{% url 'djangoapp:login' %}">
-                {% csrf_token %}
-                <input class="form-control" type="text" id="username" name="username" placeholder="Username:">
-                <input class="form-control" type="password" id="password" name="password" placeholder="Password:">
-                <button class="btn btn-primary" type="submit">Login</button>
-                <button class="btn btn-default text-primary" type="submit">Sign Up</button>
-            </form>
-        {% endif %}
-    </nav>
-
+    {% include 'nav_bar.html' %}
 
 
     </body>
